# apps/app/api/index.ts
@@ -123,6 +123,7 @@ export type {
     GetTransactionsData,
     GetTransactionsResponses,
     GetUserData,
+    GetUserError,
     GetUserErrors,
     GetUserResponse,
     GetUserResponses,
@@ -164,6 +165,7 @@ export type {
     PutTransactionsByIdData,
     PutTransactionsByIdResponses,
     PutUserData,
+    PutUserError,
     PutUserErrors,
     PutUserResponse,
     PutUserResponses,
@@ -175,6 +177,7 @@ export type {
     Session,
     SessionRequest,
     SessionResponse,
+    SimpleSuccessResponse,
     Snapshot,
     SnapshotFrequencyEnum,
     SnapshotRequest,
